feat:  edit in module.py

--- a/main.ipynb
+++ b/main.ipynb
@@ -2244,10 +2244,10 @@
     "            for lon_min, lon_max in lon_bins:\n",
     "                grid.append({\n",
     "                    \"index\": f\"Area_{area_id}\",\n",
-    "                    \"minimum-latitude\": lat_min,\n",
-    "                    \"maximum-latitude\": lat_max,\n",
-    "                    \"minimum-longitude\": lon_min,\n",
-    "                    \"maximum-longitude\": lon_max,\n",
+    "                    \"minimum_latitude\": lat_min,\n",
+    "                    \"maximum_latitude\": lat_max,\n",
+    "                    \"minimum_longitude\": lon_min,\n",
+    "                    \"maximum_longitude\": lon_max,\n",
     "                })\n",
     "                area_id += 1\n",
     "\n",
@@ -2257,15 +2257,15 @@
     "        for area in grid:\n",
     "            if (\n",
     "                (\n",
-    "                    area[\"minimum-latitude\"] <= lat\n",
+    "                    area[\"minimum_latitude\"] <= lat\n",
     "                    and\n",
-    "                    lat < area[\"maximum-latitude\"]\n",
+    "                    lat < area[\"maximum_latitude\"]\n",
     "                )\n",
     "                and\n",
     "                (\n",
-    "                    area[\"minimum-longitude\"] <= lon\n",
+    "                    area[\"minimum_longitude\"] <= lon\n",
     "                    and\n",
-    "                    lon < area[\"maximum-longitude\"]\n",
+    "                    lon < area[\"maximum_longitude\"]\n",
     "                )\n",
     "            ):\n",
     "                return area[\"index\"]\n",
@@ -2278,7 +2278,7 @@
     "        for data in data_list:\n",
     "            lat = data[\"latitude\"]\n",
     "            lon = data[\"longitude\"]\n",
-    "            area = find_grid(lat, lon, grid)\n",
+    "            area = self.find_grid(lat, lon, grid)\n",
     "\n",
     "            if area:\n",
     "                data_container[area].append(data)\n",
@@ -2441,32 +2441,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "id": "51495200",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mongodb://localhost:27017/hydrolab-database\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
     "import os\n",
     "\n",
     "load_dotenv()\n",
     "\n",
-    "DB_URI = os.getenv(\"MONGODB_URI_CONNECTION\")\n",
-    "\n",
-    "print(DB_URI)"
+    "DB_URI = os.getenv(\"MONGODB_URI_CONNECTION\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "id": "95a52d64",
    "metadata": {},
    "outputs": [
@@ -2474,29 +2464,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data stored in DB: hydrolab-database, Collection: Area_1\n",
-      "Data stored in DB: hydrolab-database, Collection: Area_2\n",
-      "Data stored in DB: hydrolab-database, Collection: Area_7\n",
-      "Data stored in DB: hydrolab-database, Collection: Area_13\n",
-      "Data stored in DB: hydrolab-database, Collection: Area_8\n",
-      "Data stored in DB: hydrolab-database, Collection: Area_11\n",
-      "Data stored in DB: hydrolab-database, Collection: Area_12\n",
-      "Data stored in DB: hydrolab-database, Collection: Area_10\n",
-      "Data stored in DB: hydrolab-database, Collection: Area_14\n",
-      "Data stored in DB: hydrolab-database, Collection: Area_16\n",
-      "Data stored in DB: hydrolab-database, Collection: Area_18\n",
-      "Data stored in DB: hydrolab-database, Collection: Area_3\n",
-      "Data stored in DB: hydrolab-database, Collection: Area_17\n",
-      "Data stored in DB: hydrolab-database, Collection: Area_9\n",
-      "Data stored in DB: hydrolab-database, Collection: Area_4\n",
-      "Data stored in DB: hydrolab-database, Collection: Area_15\n",
-      "Data stored in DB: hydrolab-database, Collection: Area_5\n",
-      "Data stored in DB: hydrolab-database, Collection: Area_6\n"
+      "Data stored in DB: hydrolab-database-v0, Collection: Area_1\n",
+      "Data stored in DB: hydrolab-database-v0, Collection: Area_2\n",
+      "Data stored in DB: hydrolab-database-v0, Collection: Area_7\n",
+      "Data stored in DB: hydrolab-database-v0, Collection: Area_13\n",
+      "Data stored in DB: hydrolab-database-v0, Collection: Area_8\n",
+      "Data stored in DB: hydrolab-database-v0, Collection: Area_11\n",
+      "Data stored in DB: hydrolab-database-v0, Collection: Area_12\n",
+      "Data stored in DB: hydrolab-database-v0, Collection: Area_10\n",
+      "Data stored in DB: hydrolab-database-v0, Collection: Area_14\n",
+      "Data stored in DB: hydrolab-database-v0, Collection: Area_16\n",
+      "Data stored in DB: hydrolab-database-v0, Collection: Area_18\n",
+      "Data stored in DB: hydrolab-database-v0, Collection: Area_3\n",
+      "Data stored in DB: hydrolab-database-v0, Collection: Area_17\n",
+      "Data stored in DB: hydrolab-database-v0, Collection: Area_9\n",
+      "Data stored in DB: hydrolab-database-v0, Collection: Area_4\n",
+      "Data stored in DB: hydrolab-database-v0, Collection: Area_15\n",
+      "Data stored in DB: hydrolab-database-v0, Collection: Area_5\n",
+      "Data stored in DB: hydrolab-database-v0, Collection: Area_6\n"
      ]
     }
    ],
    "source": [
-    "spliter.UploadData(DB_URI=DB_URI, DB_NAME=\"hydrolab-database\")"
+    "spliter.UploadData(DB_URI=DB_URI, DB_NAME=\"hydrolab-database-v0\")"
    ]
   }
  ],
